--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -38,29 +38,29 @@
 
 			<!-- Divider -->
 			<hr class="sidebar-divider">
-			<div sec:authorize="hasAuthority('ROLE_AUT001')">
-			<!-- Heading -->
-			<div class="sidebar-heading">Interface</div>
-
-			<!-- Nav Item - Pages Collapse Menu -->
-			<li class="nav-item"><a class="nav-link collapsed" href="#"
-				data-toggle="collapse" data-target="#collapseTwo"
-				aria-expanded="true" aria-controls="collapseTwo"> <i
-					class="fas fa-fw fa-cog"></i> <span>시스템 관리</span>
-			</a>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
-						<h6 class="collapse-header">코드관리 메뉴:</h6>
-						<a class="collapse-item" th:href="@{/admin/commonCode}">공통코드
-							관리</a>
-					</div>
-				</div></li>
-			
-
-			<!-- Divider -->
-			<hr class="sidebar-divider">
-			</div>
+			<th:block sec:authorize="hasAuthority('ROLE_AUT001')">
+				<!-- Heading -->
+				<div class="sidebar-heading">Interface</div>
+		
+				<!-- Nav Item - Pages Collapse Menu -->
+				<li class="nav-item"><a class="nav-link collapsed" href="#"
+					data-toggle="collapse" data-target="#collapseTwo"
+					aria-expanded="true" aria-controls="collapseTwo"> <i
+						class="fas fa-fw fa-cog"></i> <span>시스템 관리</span>
+				</a>
+					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+						data-parent="#accordionSidebar">
+						<div class="bg-white py-2 collapse-inner rounded">
+							<h6 class="collapse-header">코드관리 메뉴:</h6>
+							<a class="collapse-item" th:href="@{/admin/commonCode}">공통코드
+								관리</a>
+						</div>
+					</div></li>
+				
+		
+				<!-- Divider -->
+				<hr class="sidebar-divider">
+			</th:block>
 			<!-- Heading -->
 			<div class="sidebar-heading">
 				<!-- Nav Item - Utilities Collapse Menu -->
