--- a/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
+++ b/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
@@ -39,10 +39,16 @@
                                     		<option value="CANCELED">취소</option>
                                 		</select>
                                 	</div>
-                                	<div class="d-flex align-items-center gap-2">
-										<label for="cliSearch" class="cliSearch">거래처명</label>
-										<input type="search" id="cliSearch" placeholder="">
-									</div>
+									<div class="d-flex align-items-center gap-2">
+            							<label for="combinedSearch" class="combinedSearchLabel">검색</label>
+            							<input type="search" id="combinedSearch" placeholder="거래처명/발주번호" class="form-control" style="width: 180px;">
+        							</div>
+        							<div class="d-flex align-items-center gap-2">
+            							<label for="inputDateSearch" class="inputDateSearch">입고요청일</label>
+            							<input type="date" id="inputDateSearch" class="form-control" style="width: 140px;">
+            							<span class="text-secondary">~</span>
+            							<input type="date" id="inputDateEndSearch" class="form-control" style="width: 140px;">
+        							</div>
 								</div>
                             	<div class="search-buttons">
                             		<button id="searchBtn" class="btn btn-light">검색</button>
