--- a/erp_mes/src/main/resources/templates/pm/product_plan_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_plan_list.html
@@ -38,7 +38,7 @@
 		            </div>
 		
 		            <!-- 모달 바디 -->
-		            <div class="modal-body" style="height: 600px;">
+		            <div class="modal-body" style="height: 600px; ">
 		                <div class="row mb-4">
 						  <div class="col">
 						    <label class="form-label">등록된 수주</label>
@@ -51,22 +51,18 @@
 		                    <div class="col">
 		                        <label for="product_id" class="form-label">생산계획 번호</label>
 		                        <input type="text" id="plan_id" name="planId" class="form-control" placeholder="ex) PP20250101-001">
+		                        <input type="hidden" id="order_id" name="orderId" class="form-control">
 		                    </div>
 						</div>
 						<div class="row mb-4">
 		                    <div class="col">
 		                      <label for="product_name" class="form-label">제품명</label>
-						      <select name="productId" class="form-control">
-						        <option value="">선택하세요</option>
-						        <option th:each="p : ${productName}"
-						                th:value="${p.productId}"
-						                th:text="${p.productName} + ' (' + ${p.productId} + ')'">
-						        </option>
-						      </select>
+		                        <input type="text" id="product_name" name="productName" class="form-control" placeholder="ex) 10" readonly="readonly">
+		                        <input type="hidden" id="product_id" name="productId" class="form-control">
 		                    </div>
 		                    <div class="col">
 		                        <label for="product_name" class="form-label">생산 수량</label>
-		                        <input type="text" id="plan_quantity" name="planQuantity" class="form-control" placeholder="ex) 10">
+		                        <input type="text" id="plan_quantity" name="planQuantity" class="form-control" placeholder="ex) 10" readonly="readonly">
 		                    </div>
 						</div>
 						<div class="row mb-4">
@@ -80,7 +76,7 @@
 		                    </div>
 		                    <div class="col">
 		                        <label for="product_name" class="form-label">납기일</label>
-		                        <input type="date" id="due_date" name="dueDate" class="form-control">
+		                        <input type="date" id="due_date" name="dueDate" class="form-control" readonly="readonly">
 		                    </div>
 		                </div>
 		            </div>
