거래처, 수주, 발주, 출하에 대한 부서, 직급별 권한 제어 추가

--- a/erp_mes/src/main/resources/templates/business/shipment.html
+++ b/erp_mes/src/main/resources/templates/business/shipment.html
@@ -113,6 +113,11 @@
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <script th:src="@{/business/js/shipment.js}"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
+    <script th:inline="javascript">
+    	const isBUSTeam = /*[[${isBUSTeam}]]*/ false;
+    	const isAUTLevel = /*[[${isAUTLevel}]]*/ false;
+	</script>
 </th:block>
 
 </body>
