--- a/erp_mes/src/main/resources/templates/business/client.html
+++ b/erp_mes/src/main/resources/templates/business/client.html
@@ -107,7 +107,7 @@
                        		<select id="clientStatus" class="form-select" required>
                             	<option value="">선택</option>
                             	<option value="ACTIVE">거래중</option>
-                            	<option value="INACTIVE">거래 중지</option>
+                            	<option value="INACTIVE">거래중지</option>
                         	</select>
                     	</div>
                     	<div class="mb-3">
@@ -139,6 +139,10 @@
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <script th:src="@{/business/js/client.js}"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
+    <script th:inline="javascript">
+    	const isAUTLevel = /*[[${isAUTLevel}]]*/ false;
+	</script>
 </th:block>
 
 </body>
