--- a/erp_mes/src/main/resources/templates/business/order.html
+++ b/erp_mes/src/main/resources/templates/business/order.html
@@ -136,7 +136,14 @@
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <script th:src="@{/business/js/order.js}"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
+    <script th:inline="javascript">
+    	const isBUSTeam = /*[[${isBUSTeam}]]*/ false;
+    	const isAUTLevel = /*[[${isAUTLevel}]]*/ false;
+	</script>
 </th:block>
+
+
 
 </body>
 </html>
