--- a/erp_mes/src/main/resources/templates/login.html
+++ b/erp_mes/src/main/resources/templates/login.html
@@ -73,8 +73,9 @@
 									<hr>
 									<div class="dev-login">
 									<h3>테스트용 로그인 버튼</h3>
-										<a href="#" class="login" id="admin" data-role="ADMIN">ADMIN</a><br>
-										<a href="#" class="login" id="user"data-role="USER">USER</a>
+										<a href="#" class="login" id="admin" data-role="ADMIN">관리자계정</a><br>
+										<a href="#" class="login" id="user"data-role="USER">인사계정</a>
+										<a href="#" class="login" id="user"data-role="USER">일반사원</a>
 									</div>
 								</div>
 							</div>
